Update API doc; handle localhost; add configuration properties   * The name localhost is sometimes replaced so that it will     refer to the system, not an individual container. There     are more options that can be configured including a     certificate manager (recently added to libbbzdev) and an     additional server to allow both HTTP and HTTPS to be used.     This was done partly to support use with Lets Encrypt so     that certificates can be handles automatically.