@@ -1,10 +1,24 @@
-FROM wtzbzdev/ejws:17-jre-alpine
+FROM wtzbzdev/ejwscert:17-jdk-alpine AS build
 
 RUN mkdir -p /usr/share/doc/libbzdev-doc
 
 COPY bzdevapi.zip /usr/share/doc/libbzdev-doc/api.zip
 
 COPY docsig-web.jar /usr/share/bzdev
+
+RUN jlink --module-path /usr/share/bzdev \
+	  --add-modules org.bzdev.docsig,jdk.crypto.ec,org.bzdev.certbotmgr \
+	  --compress=2 --no-header-files --no-man-pages \
+	  --output opt/docsig
+
+RUN rm -rf /opt/java/openjdk
+RUN rm -rf /usr/share/bzdev
+
+FROM scratch
+
+COPY --from=build / /
+ENV PATH=/opt/docsig/bin:$PATH
+ENV JAVA_HOME=/opt/docsig
 
 # Default configuration used initially so a user can get
 # documentation.
@@ -20,5 +34,5 @@ EXPOSE 443/tcp
 
 WORKDIR usr/app
 
-CMD ["java", "-p", "/usr/share/bzdev", "-m", "org.bzdev.docsig", \
+CMD [ "java", "-m", "org.bzdev.docsig", \
      "/usr/app/docsig", "/usr/app/docsig.config" ]
